--- a/src/app/portfolio/built/built.component.html
+++ b/src/app/portfolio/built/built.component.html
@@ -88,3 +88,51 @@
   </div>
 
 </div>
+
+<div class="feedback-body">
+
+  <div class="container slider">
+    <div [@slideAnimation]="currentIndex" class="ng-tmp">
+      <ng-template ngFor [ngForOf]="slides" let-slide let-i="index" class="ng-tmp">
+
+        <div *ngIf="isCurrentSlideIndex(i)" style="width: 100%;height: 100%" (swiperight)="nextSlide()"
+             (swipeleft)="prevSlide()">
+          <section  class="relative  overflow-hidden #0A192F px-6 py-24 sm:py-32 lg:px-8">
+            <div class="absolute inset-0 -z-10 bg-[radial-gradient(45rem_50rem_at_top,theme(colors.indigo.100),white)] opacity-20"></div>
+            <div class="absolute inset-y-0 right-1/2 -z-10 mr-16 w-[200%] origin-bottom-left skew-x-[-30deg] #0A192F shadow-xl shadow-indigo-600/10 ring-1 ring-indigo-50 sm:mr-28 lg:mr-0 xl:mr-16 xl:origin-center"></div>
+            <div class="mx-auto max-w-2xl lg:max-w-4xl">
+              <div style="width: 100%; display: flex;justify-content: center;align-items: center">
+                <span class="txt_header"> Feedback </span>
+              </div>
+              <!--<img class="mx-auto h-12" src="https://tailwindui.com/img/logos/workcation-logo-indigo-600.svg" alt="">-->
+              <figure class="mt-10">
+                <blockquote class="text-center leading-8 text-gray-300 sm:text-2xl sm:leading-9 " >
+                  <p data-aos="zoom-in-up" class="txt_feedback_des">{{slide.description}}</p>
+                </blockquote>
+                <figcaption class="mt-10">
+                  <img data-aos="zoom-in-up" class="mx-auto h-10 w-10 rounded-full" src="{{slide.img}}" alt="">
+                  <div class="mt-4 flex items-center justify-center space-x-3 text-base">
+                    <div data-aos="zoom-in-up" class="font-semibold text-gray-400">{{slide.name}}</div>
+                    <svg viewBox="0 0 2 2" width="3" height="3" aria-hidden="true" class="fill-gray-900">
+                      <circle cx="1" cy="1" r="1" />
+                    </svg>
+                    <div data-aos="zoom-in-up" class="text-gray-600">{{slide.profession}}</div>
+                  </div>
+                </figcaption>
+              </figure>
+            </div>
+          </section>
+
+
+        </div>
+      </ng-template>
+    </div>
+
+
+    <mat-icon class="arrow prev" (click)="nextSlide()" style="color: gray">keyboard_arrow_left</mat-icon>
+
+    <mat-icon class="arrow next" (click)="prevSlide()" style="color: gray">keyboard_arrow_right</mat-icon>
+  </div>
+
+
+</div>
