--- a/src/app/portfolio/built/built.component.scss
+++ b/src/app/portfolio/built/built.component.scss
@@ -556,3 +556,354 @@
   }
 
 }
+
+
+
+
+.divBox {
+  width: 100%!important;
+  display: flex;
+  height: 80vh;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 20px;
+}
+
+.side1{
+  // height: 100%;
+  // width: 100%;
+  // display: flex;
+  // justify-content: center;
+  // align-items: center;
+  // background-color: #5aff15;
+  .imgSize {
+    width: 70px;
+  }
+
+}
+.kaluthara_txt {
+  font-weight: bold;
+}
+.shopName {
+  font-family: "Calibre","Inter","San Francisco","SF Pro Text",-apple-system,system-ui,sans-serif;
+  font-size: 24px;
+  padding-top: 10px;
+}
+@media only screen and (max-width: 1169px) {
+
+
+
+  .description {
+    color: gray;
+    font-size: 11px;
+  }
+  .slide {
+    position: absolute;
+    width: 80%;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    margin: auto;
+  }
+
+
+}
+
+.side2{
+  height: 100%;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  background-color: transparent;
+}
+
+.bannerImg {
+  width: 100%;
+  height: 100%;
+  display: flex;
+}
+@media only screen and (max-width: 768px) {
+  .divBox {
+    flex-direction: column-reverse;
+    width: 100%;
+  }
+
+
+
+}
+
+
+.slider {
+  height: 100%;
+  width: 100% !important;
+  overflow: hidden;
+  position: relative;
+  background-color: transparent;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  padding: 0;
+  margin: 0;
+}
+
+.slide {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  margin: auto;
+  width: 100%!important;
+}
+
+.arrow {
+  position: absolute;
+  z-index: 1;
+  display: block;
+  top: 50%;
+  margin-top: -35px;
+  width: 36px;
+  height: 71px;
+  outline: none !important;
+  cursor: pointer;
+  border: none;
+}
+
+.arrow.prev {
+  opacity: 0.2;
+  left: 20px;
+  font-size: 50px;
+  transition: 0.2s linear all;
+}
+
+.arrow.next {
+  opacity: 0.2;
+  right: 20px;
+  font-size: 50px;
+  transition: 0.2s linear all;
+}
+
+.arrow.prev:hover {
+  opacity: 1;
+}
+
+.arrow.next:hover {
+  opacity: 1;
+}
+
+
+.social-links {
+  display: flex;
+}
+
+.social-links a {
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  text-decoration: none;
+  color: #000;
+  box-shadow: 0 0 20px 10px rgba(0, 0, 0, 0.05);
+  margin: 0 10px;
+  border-radius: 50%;
+  position: relative;
+  overflow: hidden;
+  transition: transform 0.5s;
+}
+
+.social-links a .fab {
+  font-size: 30px;
+  line-height: 40px;
+  position: relative;
+  z-index: 10;
+  transition: color 0.5s;
+}
+
+.social-links a::after {
+  content: '';
+  width: 100%;
+  height: 100%;
+  top: -90px;
+  left: 0;
+  background-color: #00b712;
+  background-image: linear-gradient(315deg, #00b712 0%, #5aff15 74%);
+  position: absolute;
+  transition: 0.5s;
+}
+
+.social-links a:hover::after {
+  top: 0;
+}
+
+.social-links a:hover .fab {
+  color: #fff;
+}
+
+.social-links a:hover {
+  transform: translateY(-10px);
+}
+.btn-car-selected {
+  background: linear-gradient(-45deg, #ed1c94, #ffec17);
+  color: white;
+  border-radius: 20px;
+  box-shadow: 0 0 20px 10px rgba(0, 0, 0, 0.05);
+
+  &:hover{
+    background: linear-gradient(45deg, #ed1c94, #ffec17);
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .title {
+    font-size: 14px;
+  }
+  .social-links a {
+    width: 25px;
+    height: 25px;
+  }
+  .social-links a .fab {
+    font-size: 15px;
+    line-height: 25px;
+  }
+  .imgSize {
+    display: none;
+  }
+}
+
+.ng-tmp {background-color: transparent;}
+
+
+.img_icon {
+  width: 20px !important;
+  margin: 0;
+  // padding: 0;
+  padding-bottom: 12px;
+}
+
+
+
+
+// ***********************
+.side1 {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  // background-color: #5aff15;
+  .side1_mini_box {
+    width: 80%;
+    height: 70%;
+    // background-color: blue;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: column;
+    text-align: center;
+    .shopName {
+      font-family: "Calibre","Inter","San Francisco","SF Pro Text",-apple-system,system-ui,sans-serif;
+      font-size: 24px;
+      padding-top: 10px;
+    }
+    .welcome {
+      font-size: 50px;
+      font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+      line-height: 30px;
+    }
+    .description {
+      color: gray;
+      font-size: 11px;
+    }
+    .shopbtn {
+      background-color: gray;
+      width: 150px;
+      height: 37px;
+      border: none;
+      color: white;
+      border-radius: 20px;
+      margin-top: 20px;
+      // border-top-left-radius: 20px;
+      // border-bottom-right-radius: 20px;
+      // border-bottom-left-radius: 5px;
+      // border-top-right-radius: 5px;
+    }
+    .shopbtn:hover {
+      background-color: darkgray;
+    }
+  }
+}
+
+@media only screen and (max-width: 770px) {
+  .side1_mini_box {
+    width: 100%;
+    height: 100% !important;
+  }
+  .feedback-body {
+    height: auto !important;
+  }
+  .arrow {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 980px) {
+  .welcome {
+    font-size: 36px !important;
+
+  }
+  .feedback-body {
+    height: auto !important;
+  }
+}
+
+@media only screen and (max-width: 425px) {
+  .shopName {
+    font-size: 18px !important;
+  }
+  .side1_mini_box {
+    width: 95% !important;
+    height: 70%;
+
+    .welcome {
+      font-size: 24px !important;
+    }
+  }
+  .feedback-body {
+    height: auto !important;
+  }
+}
+
+
+.feedback-body {
+  width: 100%;
+  height: 80vh;
+  background-color: #0A192F;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 100px;
+}
+.txt_header {
+  margin-left: 5px;
+  color: #CCD6F6;
+  font-size: 26px;
+  font-family: "Calibre","Inter","San Francisco","SF Pro Text",-apple-system,system-ui,sans-serif;
+  font-weight: bold;
+}
+.ruler {
+  width: 100px;
+  margin-left: 20px;
+  height: 1px;
+  background-color: gray;
+}
+
+.txt_feedback_des {
+  color: #CCD6F6 !important;
+  font-family: "Calibre","Inter","San Francisco","SF Pro Text",-apple-system,system-ui,sans-serif !important;
+  font-size: 22px  !important;;
+}
